k8s/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - "server.chiyapatti.co"
    secretName: employee-tls
  rules:
    - host: "server.chiyapatti.co"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: employee-service
                port:
                  number: 8080
