k8s/ingress-nginx-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - server.chiyapatti.co
    secretName: employee-app-tls
  rules:
  - host: "server.chiyapatti.co"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: employee-service
            port:
              number: 8080
